# ios-bridge

./: .gitignore  CONCURRENCY_MANAGEMENT.md  INSTALLATION_GUIDE.md  IOSSimulatorManager.py  PUBLISHING_CHECKLIST.md  PUBLISHING_GUIDE.md  Readme.md  STREAMING_ARCHITECTURE.md  SimulaotrStreamServer.py  bridge.py  bump_version.py  client.html  create_simulator_test_app.py  index.html  ios_testing.ipynb  main.py  nativebridge-ios-poc.ipynb  requirements.txt  run.py  simulator_sessions.json  test_video.h264  webrtc_stream_test.py
.github/workflows/: build-and-release.yml
README/: CROSS_PLATFORM_SETUP.md  INSTALLATION_GUIDE.md  PUBLISHING_CHECKLIST.md  PUBLISHING_GUIDE.md  VERSION_MANAGEMENT.md
app/: main.py
app/config/: settings.py
app/core/: exceptions.py  logging.py
app/models/: events.py  responses.py
app/services/: app_installation_service.py  connection_manager.py  device_service.py  fast_webrtc_service.py  ios_app_analyzer_service.py  ios_sim_manager_service.py  low_latency_webrtc_service.py  (+6 more)
ios-bridge-cli/: MANIFEST.in  README.md  pyproject.toml
ios-bridge-cli/ios_bridge_cli/: __init__.py  app_manager.py  cli.py
ios-bridge-cli/ios_bridge_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ios-bridge-cli/ios_bridge_cli/electron_app/: README.md  package-lock.json  package.json
ios-bridge-cli/ios_bridge_cli/electron_app/assets/icons/: icon.icns
ios-bridge-cli/ios_bridge_cli/electron_app/src/: main.js  preload.js  renderer.html  renderer.js  styles.css
static/: index.html
templates/: control.html  session_list.html  simulator_control.html
(+12 files in other folders)
